scripts: fix winter-is-coming-dark-blue active tab contrast
Active tab bg (0b2942) was nearly indistinguishable from inactive (122d42).
Switch to 103362 for both groupbar tab and waybar active workspace.

--- a/scripts/themes/winter-is-coming-dark-blue/waybar.css
+++ b/scripts/themes/winter-is-coming-dark-blue/waybar.css
@@ -33,7 +33,7 @@ tooltip label {
 }
 
 #workspaces button.active {
-    background-color: #0b2942;
+    background-color: #103362;
     color: #d6deeb;
     border-radius: 3px;
 }
